--- a/en/index.html
+++ b/en/index.html
@@ -120,11 +120,11 @@
   <div class="container">
     <div class="logo">
       
-      <a href="https://idurian.github.io/en/">深圳市聚酷智能科技有限公司en</a>
+      <a href="https://idurian.github.io/en/">深圳市聚酷智能科技有限公司</a>
     </div>
     <div class="logo-mobile">
       
-      <a href="https://idurian.github.io/en/">深圳市聚酷智能科技有限公司en</a>
+      <a href="https://idurian.github.io/en/">深圳市聚酷智能科技有限公司</a>
     </div>
     <div id="main-menu" class="main-menu">
   <ul>
@@ -225,7 +225,7 @@
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section"></span>
-      <h1>我们是一家集设计、研发、生产、销售于一体的高科技企业en</h1>
+      <h1>我们是一家集设计、研发、生产、销售于一体的高科技企业</h1>
       <p>我们致力于提升智能产品为用户带来的超脱体验，秉承“始于客户需求，终于客户满意”的服务理念和“敬业、创新、专业服务”的工作态度，提供优质的产品和服务，为客户及合作伙伴实现长期的价值。</p>
     </div>
     <div class="hero-down">
