--- a/cn/contact/index.html
+++ b/cn/contact/index.html
@@ -226,6 +226,7 @@
       <p>We offer a free consultation for all new clients.</p>
 
       <ul>
+        <li><strong>联系人: </strong>孔先生</li>
         <li><strong>电话: </strong>13929475162</li>
         <li><strong>微信: </strong>13929475162</li>
         <li><strong>邮箱: </strong><a href="mailto:KLB@jukuner.com">
