--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -226,6 +226,7 @@
       <p>We offer a free consultation for all new clients.</p>
 
       <ul>
+        <li><strong>Contact: </strong>孔先生</li>
         <li><strong>Phone: </strong>13929475162</li>
         <li><strong>Wechat: </strong>13929475162</li>
         <li><strong>Email: </strong><a href="mailto:KLB@jukuner.com">
