--- a/en/work/index.html
+++ b/en/work/index.html
@@ -217,7 +217,7 @@
     <div class="hero-text">
       <span class="hero-section"></span>
       <h1>产品介绍</h1>
-      <p>专注于iot智能小家电产品领域, 产品涵盖唤醒灯 、智能闹钟、 氛围灯类、天气时钟、温湿度记、智能门铃以及智能遥控设备等众多品类</p>
+      <p>专注于iot智能小家电产品领域, 产品涵盖唤醒灯 、智能闹钟、 氛围灯类、天气时钟、温湿度计、智能门铃以及智能遥控设备等众多品类</p>
     </div>
   </div>
 </div>
