--- a/en/pages/index.html
+++ b/en/pages/index.html
@@ -237,9 +237,9 @@
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-6">
-          <p>2018年5月18日：公司成立</p>
-<p>2018年10月：第一款产品唤醒灯上市</p>
-<p>2019年：唤醒灯亚马逊市场占有率30%，产品扩展到智能闹钟、智能遥控器、智能手机配件等品线</p>
+          <p>May 18, 2018: Shenzhen Juku Intelligent Technology Co., Ltd was established</p>
+<p>October 2018: The first product wake-up light launched</p>
+<p>2019: Amazon market share of wake-up lights is 30%, and products are expanded to smart alarm clocks, smart remote controls, smartphone accessories and other product lines</p>
 
           
       </div>
@@ -259,9 +259,9 @@
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-6 offset-md-6">
-          <p>2020年：成为智能家居行业知名的产品提供商</p>
-<p>2021年：唤醒灯三代上市，新品线氛围灯系列上市</p>
-<p>2021年：智能门铃上市</p>
+          <p>2020: Become a well-known product provider in the smart home automation area</p>
+<p>2021: The 3rd  wake-up lights launched, and the new ambient light series  launched</p>
+<p>2022: Smart doorbells will coming</p>
 
           
       </div>
@@ -315,9 +315,9 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Phone: </strong>13929475162</li>
-            <li><strong>Email: </strong><a href="mailto:KLB@jukuner.com">
-                KLB@jukuner.com</a></li>
+            <li><strong>Phone: </strong>0086 13827224116</li>
+            <li><strong>Email: </strong><a href="mailto:tony.d@jukuner.com">
+                tony.d@jukuner.com</a></li>
           </ul>
           <ul>
             <li><a href="https://idurian.github.io/en/">localhost</a></li>
