--- a/en/services/content1/index.html
+++ b/en/services/content1/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>市场分析选品 - Jukuner</title>
+  <title>Market analysis selection - Jukuner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="https://idurian.github.io/favicon.png">
@@ -215,8 +215,8 @@
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section">services</span>
-      <h1>市场分析选品</h1>
-      <p>行业与市场分析，并以亚马逊卖家角度选品（借助大数据工具），确定有竞争机会的细分产品</p>
+      <h1>Market analysis selection</h1>
+      <p>We will analysis industry and market and select products from the perspective of Amazon sellers (by big data tools) to identify segmented products with competitive opportunities.</p>
     </div>
   </div>
 </div>
@@ -225,7 +225,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>行业与市场分析，并以亚马逊卖家角度选品（借助大数据工具），确定有竞争机会的细分产品。</p>
+        <div class="content"><p>We will analysis industry and market and select products from the perspective of Amazon sellers (by big data tools) to identify segmented products with competitive opportunities.</p>
 </div>
       </div>
     </div>
@@ -269,9 +269,9 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Phone: </strong>13929475162</li>
-            <li><strong>Email: </strong><a href="mailto:KLB@jukuner.com">
-                KLB@jukuner.com</a></li>
+            <li><strong>Phone: </strong>0086 13827224116</li>
+            <li><strong>Email: </strong><a href="mailto:tony.d@jukuner.com">
+                tony.d@jukuner.com</a></li>
           </ul>
           <ul>
             <li><a href="https://idurian.github.io/en/">localhost</a></li>
