--- a/en/services/content6/index.html
+++ b/en/services/content6/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>销售渠道管控 - Jukuner</title>
+  <title>Sales Channel Control - Jukuner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="https://idurian.github.io/favicon.png">
@@ -215,8 +215,8 @@
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section">services</span>
-      <h1>销售渠道管控</h1>
-      <p>销售渠道管控，保证产品生命周期</p>
+      <h1>Sales Channel Control</h1>
+      <p>To ensure the product life cycle. We control the sale channels.</p>
     </div>
   </div>
 </div>
@@ -225,7 +225,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>销售渠道管控，保证产品生命周期。</p>
+        <div class="content"><p>To ensure the product life cycle. We control the sale channels.</p>
 </div>
       </div>
     </div>
@@ -269,9 +269,9 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Phone: </strong>13929475162</li>
-            <li><strong>Email: </strong><a href="mailto:KLB@jukuner.com">
-                KLB@jukuner.com</a></li>
+            <li><strong>Phone: </strong>0086 13827224116</li>
+            <li><strong>Email: </strong><a href="mailto:tony.d@jukuner.com">
+                tony.d@jukuner.com</a></li>
           </ul>
           <ul>
             <li><a href="https://idurian.github.io/en/">localhost</a></li>
