--- a/cn/contact/index.html
+++ b/cn/contact/index.html
@@ -226,11 +226,11 @@
       <p>We offer a free consultation for all new clients.</p>
 
       <ul>
-        <li><strong>联系人: </strong>孔先生</li>
-        <li><strong>电话: </strong>13929475162</li>
-        <li><strong>微信: </strong>13929475162</li>
-        <li><strong>邮箱: </strong><a href="mailto:KLB@jukuner.com">
-            KLB@jukuner.com</a></li>
+        <li><strong>联系人: </strong>Tony</li>
+        <li><strong>电话: </strong>13827224116</li>
+        <li><strong>微信: </strong>13827224116</li>
+        <li><strong>邮箱: </strong><a href="mailto:tony.d@jukuner.com">
+            tony.d@jukuner.com</a></li>
         
         <li style="white-space: pre-wrap;"><strong>地址: </strong>深圳市龙岗区坂田街道天安云谷二期11栋511室</li>
         
@@ -277,9 +277,9 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>电话: </strong>13929475162</li>
-            <li><strong>邮箱: </strong><a href="mailto:KLB@jukuner.com">
-                KLB@jukuner.com</a></li>
+            <li><strong>电话: </strong>13827224116</li>
+            <li><strong>邮箱: </strong><a href="mailto:tony.d@jukuner.com">
+                tony.d@jukuner.com</a></li>
           </ul>
           <ul>
             <li><a href="https://idurian.github.io/cn/">localhost</a></li>
