--- a/cn/services/content3/index.html
+++ b/cn/services/content3/index.html
@@ -269,9 +269,9 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>电话: </strong>13929475162</li>
-            <li><strong>邮箱: </strong><a href="mailto:KLB@jukuner.com">
-                KLB@jukuner.com</a></li>
+            <li><strong>电话: </strong>13827224116</li>
+            <li><strong>邮箱: </strong><a href="mailto:tony.d@jukuner.com">
+                tony.d@jukuner.com</a></li>
           </ul>
           <ul>
             <li><a href="https://idurian.github.io/cn/">localhost</a></li>
