--- a/en/about/index.html
+++ b/en/about/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>关于我们 - Jukuner</title>
+  <title>About Us - Jukuner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="https://idurian.github.io/favicon.png">
@@ -215,7 +215,7 @@
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section"></span>
-      <h1>关于我们</h1>
+      <h1>About Us</h1>
       <p></p>
     </div>
   </div>
@@ -230,8 +230,8 @@
   <div class="container pt-17 pb-17">
     <div class="row">
       <div class="col-12 col-md-6 offset-md-6">
-        <h2 class="text-primary text-capitalize">关于我们</h2>
-        <p>深圳市聚酷智能科技有限公司是一家立足全国的创新型企业，研发团队位于北京，营销和产品团队组建于深圳，具备完善的设计、研发、销售和供应链团队，并与业内众多知名企业达成了良好的合作关系，是一个集硬件、软件和互联网服务的整体平台和体系。</p>
+        <h2 class="text-primary text-capitalize">About Us</h2>
+        <p>Shenzhen Juku Intelligent Technology Co., Ltd. is an innovative enterprise based on the whole China. The R&amp;D team is located in Beijing, and the marketing and supply-chain group is established in Shenzhen. It has a complete design, R&amp;D, sales and supply chain team. It includes overall platform and system integrating hardware, software and Internet services.</p>
 
         
       </div>
@@ -243,8 +243,8 @@
   <div class="container pt-17 pb-17">
     <div class="row">
       <div class="col-12 col-md-6 ">
-        <h2 class="text-primary text-capitalize">企业理念</h2>
-        <p>我们作为智能产品领域的开拓者，秉承与客户共同发展进步，客户至上的理念，并通过内部技术的不断创新，为客户提供更新的产品和更高质量的服务，以适应客户未来发展的需求。</p>
+        <h2 class="text-primary text-capitalize">Corporate philosophy</h2>
+        <p>As a pioneer in the field of intelligent products, we adhere to the concept of common development and progress with customers, customer first, and through continuous innovation of internal technology, we provide customers with updated products and higher quality services to meet the needs of customers&rsquo; future development.</p>
 
         
       </div>
@@ -293,9 +293,9 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Phone: </strong>13929475162</li>
-            <li><strong>Email: </strong><a href="mailto:KLB@jukuner.com">
-                KLB@jukuner.com</a></li>
+            <li><strong>Phone: </strong>0086 13827224116</li>
+            <li><strong>Email: </strong><a href="mailto:tony.d@jukuner.com">
+                tony.d@jukuner.com</a></li>
           </ul>
           <ul>
             <li><a href="https://idurian.github.io/en/">localhost</a></li>
