--- a/en/services/content4/index.html
+++ b/en/services/content4/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>产品设计及研发 - Jukuner</title>
+  <title>Product design and development - Jukuner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="https://idurian.github.io/favicon.png">
@@ -215,8 +215,8 @@
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section">services</span>
-      <h1>产品设计及研发</h1>
-      <p>ID设计、电子方案/App方案、结构设计、功能测试、可靠性测试等</p>
+      <h1>Product design and development</h1>
+      <p>It includes ID design, electronic scheme/app scheme, structural design, functional test, reliability test, etc.</p>
     </div>
   </div>
 </div>
@@ -225,7 +225,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>ID设计、电子方案/App方案、结构设计、功能测试、可靠性测试等。</p>
+        <div class="content"><p>It includes ID design, electronic scheme/app scheme, structural design, functional test, reliability test, etc.</p>
 </div>
       </div>
     </div>
@@ -269,9 +269,9 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Phone: </strong>13929475162</li>
-            <li><strong>Email: </strong><a href="mailto:KLB@jukuner.com">
-                KLB@jukuner.com</a></li>
+            <li><strong>Phone: </strong>0086 13827224116</li>
+            <li><strong>Email: </strong><a href="mailto:tony.d@jukuner.com">
+                tony.d@jukuner.com</a></li>
           </ul>
           <ul>
             <li><a href="https://idurian.github.io/en/">localhost</a></li>
