--- a/en/work/alarm-clock/alarm-clock/index.html
+++ b/en/work/alarm-clock/alarm-clock/index.html
@@ -214,7 +214,7 @@
 <div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/work/alarmClock/001.jpg')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section"><a href="https://idurian.github.io/en/work/alarm-clock/">闹钟类</a></span>
+      <span class="hero-section"><a href="https://idurian.github.io/en/work/alarm-clock/">alarm clock series</a></span>
       <h1>大屏闹钟</h1>
       <p>Revitalising a public space in Spain.</p>
     </div>
@@ -307,9 +307,9 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Phone: </strong>13929475162</li>
-            <li><strong>Email: </strong><a href="mailto:KLB@jukuner.com">
-                KLB@jukuner.com</a></li>
+            <li><strong>Phone: </strong>0086 13827224116</li>
+            <li><strong>Email: </strong><a href="mailto:tony.d@jukuner.com">
+                tony.d@jukuner.com</a></li>
           </ul>
           <ul>
             <li><a href="https://idurian.github.io/en/">localhost</a></li>
