--- a/en/work/light/index.html
+++ b/en/work/light/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>唤醒灯类 - Jukuner</title>
+  <title>wake-up light series - Jukuner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="https://idurian.github.io/favicon.png">
@@ -214,8 +214,8 @@
 <div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/work/lightV1/light001.jpg')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section"><a href="https://idurian.github.io/en/work/">产品介绍</a></span>
-      <h1>唤醒灯类</h1>
+      <span class="hero-section"><a href="https://idurian.github.io/en/work/">Product Description</a></span>
+      <h1>wake-up light series</h1>
       <p>Revitalising a public space in Spain.</p>
     </div>
   </div>
@@ -259,8 +259,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="work work-single">
-        <div class="content"><p>品类介绍内容占位</p>
-</div>
+        <div class="content"></div>
       </div>
     </div>
     
@@ -335,9 +334,9 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Phone: </strong>13929475162</li>
-            <li><strong>Email: </strong><a href="mailto:KLB@jukuner.com">
-                KLB@jukuner.com</a></li>
+            <li><strong>Phone: </strong>0086 13827224116</li>
+            <li><strong>Email: </strong><a href="mailto:tony.d@jukuner.com">
+                tony.d@jukuner.com</a></li>
           </ul>
           <ul>
             <li><a href="https://idurian.github.io/en/">localhost</a></li>
