--- a/en/work/light/lightv1/index.html
+++ b/en/work/light/lightv1/index.html
@@ -214,7 +214,7 @@
 <div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/work/lightV1/light001.jpg')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section"><a href="https://idurian.github.io/en/work/light/">唤醒灯类</a></span>
+      <span class="hero-section"><a href="https://idurian.github.io/en/work/light/">wake-up light series</a></span>
       <h1>唤醒灯一代</h1>
       <p>Revitalising a public space in Spain.</p>
     </div>
@@ -342,9 +342,9 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Phone: </strong>13929475162</li>
-            <li><strong>Email: </strong><a href="mailto:KLB@jukuner.com">
-                KLB@jukuner.com</a></li>
+            <li><strong>Phone: </strong>0086 13827224116</li>
+            <li><strong>Email: </strong><a href="mailto:tony.d@jukuner.com">
+                tony.d@jukuner.com</a></li>
           </ul>
           <ul>
             <li><a href="https://idurian.github.io/en/">localhost</a></li>
