--- a/en/work/monitor/doorbell/index.html
+++ b/en/work/monitor/doorbell/index.html
@@ -214,7 +214,7 @@
 <div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/work/charger/001.png')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section"><a href="https://idurian.github.io/en/work/monitor/">视频监控类</a></span>
+      <span class="hero-section"><a href="https://idurian.github.io/en/work/monitor/">video surveillance series</a></span>
       <h1>智能门铃</h1>
       <p>Revitalising a public space in Spain.</p>
     </div>
@@ -303,9 +303,9 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Phone: </strong>13929475162</li>
-            <li><strong>Email: </strong><a href="mailto:KLB@jukuner.com">
-                KLB@jukuner.com</a></li>
+            <li><strong>Phone: </strong>0086 13827224116</li>
+            <li><strong>Email: </strong><a href="mailto:tony.d@jukuner.com">
+                tony.d@jukuner.com</a></li>
           </ul>
           <ul>
             <li><a href="https://idurian.github.io/en/">localhost</a></li>
