--- a/cn/work/index.html
+++ b/cn/work/index.html
@@ -230,22 +230,21 @@
     <div class="col-12 col-md-4 mb-2 "><div class="work work-summary">
   
   <div class="work-image">
-    <a href="/cn/work/light/"><img src="/work/lightV1/light001.jpg"/></a>
+    <a href="/cn/work/light/"><img src="/work/light/cover.jpg"/></a>
   </div>
   
   <div class="work-content">
     <h2 class="work-title">
       <a href="https://idurian.github.io/cn/work/light/">唤醒灯类</a>
     </h2>
-    品类介绍内容占位
-
+    
   </div>
 </div></div>
     
     <div class="col-12 col-md-4 mb-2 "><div class="work work-summary">
   
   <div class="work-image">
-    <a href="/cn/work/alarm-clock/"><img src="/work/alarmClock/001.jpg"/></a>
+    <a href="/cn/work/alarm-clock/"><img src="/work/alarm-clock/cover.jpg"/></a>
   </div>
   
   <div class="work-content">
@@ -259,7 +258,7 @@
     <div class="col-12 col-md-4 mb-2 "><div class="work work-summary">
   
   <div class="work-image">
-    <a href="/cn/work/dome-light/"><img src="/work/domeLight/001.jpg"/></a>
+    <a href="/cn/work/dome-light/"><img src="/work/dome-light/cover.jpg"/></a>
   </div>
   
   <div class="work-content">
@@ -273,7 +272,7 @@
     <div class="col-12 col-md-4 mb-2 "><div class="work work-summary">
   
   <div class="work-image">
-    <a href="/cn/work/car-charger/"><img src="/work/charger/001.png"/></a>
+    <a href="/cn/work/car-charger/"><img src="/work/charger/cover.jpg"/></a>
   </div>
   
   <div class="work-content">
@@ -287,7 +286,7 @@
     <div class="col-12 col-md-4 mb-2 "><div class="work work-summary">
   
   <div class="work-image">
-    <a href="/cn/work/mobile-accessories/"><img src="/work/domeLight/001.jpg"/></a>
+    <a href="/cn/work/mobile-accessories/"><img src="/work/mobile-accessories/cover.jpg"/></a>
   </div>
   
   <div class="work-content">
@@ -301,7 +300,7 @@
     <div class="col-12 col-md-4 mb-2 "><div class="work work-summary">
   
   <div class="work-image">
-    <a href="/cn/work/monitor/"><img src="/work/charger/001.png"/></a>
+    <a href="/cn/work/monitor/"><img src="/work/monitor/cover.jpg"/></a>
   </div>
   
   <div class="work-content">
