--- a/cn/work/monitor/index.html
+++ b/cn/work/monitor/index.html
@@ -211,7 +211,7 @@
 </div>
 
     
-<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/work/charger/001.png')">
+<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/work/monitor/cover.jpg')">
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section"><a href="https://idurian.github.io/cn/work/">产品介绍</a></span>
