--- a/cn/work/light/index.html
+++ b/cn/work/light/index.html
@@ -211,7 +211,7 @@
 </div>
 
     
-<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/work/lightV1/light001.jpg')">
+<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/work/light/cover.jpg')">
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section"><a href="https://idurian.github.io/cn/work/">产品介绍</a></span>
@@ -241,7 +241,7 @@
     <div class="col-12 col-md-2 mb-2 "><div class="work work-sub-summary">
   
   <div class="work-image">
-    <a href="/cn/work/light/lightv1/"><img src="/work/lightV1/light001.jpg"/></a>
+    <a href="/cn/work/light/lightv1/"><img src="/work/lightV1/light007.jpg"/></a>
   </div>
   
   <div class="work-content">
@@ -259,8 +259,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="work work-single">
-        <div class="content"><p>品类介绍内容占位</p>
-</div>
+        <div class="content"></div>
       </div>
     </div>
     
