--- a/en/work/index.html
+++ b/en/work/index.html
@@ -230,7 +230,7 @@
     <div class="col-12 col-md-4 mb-2 "><div class="work work-summary">
   
   <div class="work-image">
-    <a href="/en/work/light/"><img src="/work/lightV1/light001.jpg"/></a>
+    <a href="/en/work/light/"><img src="/work/light/cover.jpg"/></a>
   </div>
   
   <div class="work-content">
@@ -244,7 +244,7 @@
     <div class="col-12 col-md-4 mb-2 "><div class="work work-summary">
   
   <div class="work-image">
-    <a href="/en/work/alarm-clock/"><img src="/work/alarmClock/001.jpg"/></a>
+    <a href="/en/work/alarm-clock/"><img src="/work/alarm-clock/cover.jpg"/></a>
   </div>
   
   <div class="work-content">
@@ -258,7 +258,7 @@
     <div class="col-12 col-md-4 mb-2 "><div class="work work-summary">
   
   <div class="work-image">
-    <a href="/en/work/dome-light/"><img src="/work/domeLight/001.jpg"/></a>
+    <a href="/en/work/dome-light/"><img src="/work/dome-light/cover.jpg"/></a>
   </div>
   
   <div class="work-content">
@@ -272,7 +272,7 @@
     <div class="col-12 col-md-4 mb-2 "><div class="work work-summary">
   
   <div class="work-image">
-    <a href="/en/work/car-charger/"><img src="/work/charger/001.png"/></a>
+    <a href="/en/work/car-charger/"><img src="/work/charger/cover.jpg"/></a>
   </div>
   
   <div class="work-content">
@@ -286,7 +286,7 @@
     <div class="col-12 col-md-4 mb-2 "><div class="work work-summary">
   
   <div class="work-image">
-    <a href="/en/work/mobile-accessories/"><img src="/work/domeLight/001.jpg"/></a>
+    <a href="/en/work/mobile-accessories/"><img src="/work/mobile-accessories/cover.jpg"/></a>
   </div>
   
   <div class="work-content">
@@ -300,7 +300,7 @@
     <div class="col-12 col-md-4 mb-2 "><div class="work work-summary">
   
   <div class="work-image">
-    <a href="/en/work/monitor/"><img src="/work/charger/001.png"/></a>
+    <a href="/en/work/monitor/"><img src="/work/monitor/cover.jpg"/></a>
   </div>
   
   <div class="work-content">
