--- a/en/work/light/index.html
+++ b/en/work/light/index.html
@@ -211,7 +211,7 @@
 </div>
 
     
-<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/work/lightV1/light001.jpg')">
+<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/work/light/cover.jpg')">
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section"><a href="https://idurian.github.io/en/work/">Product Description</a></span>
@@ -241,7 +241,7 @@
     <div class="col-12 col-md-2 mb-2 "><div class="work work-sub-summary">
   
   <div class="work-image">
-    <a href="/en/work/light/lightv1/"><img src="/work/lightV1/light001.jpg"/></a>
+    <a href="/en/work/light/lightv1/"><img src="/work/lightV1/light007.jpg"/></a>
   </div>
   
   <div class="work-content">
