--- a/en/work/mobile-accessories/index.html
+++ b/en/work/mobile-accessories/index.html
@@ -211,7 +211,7 @@
 </div>
 
     
-<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/work/domeLight/001.jpg')">
+<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/work/mobile-accessories/cover.jpg')">
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section"><a href="https://idurian.github.io/en/work/">Product Description</a></span>
