--- a/mobileapp.html
+++ b/mobileapp.html
@@ -68,6 +68,7 @@
       let lang = getLang();
 
       if (brand == 'iphone') {
+        downLoadUrl(iosLinkUrl)
       } else if (lang == 'zh') {
         switch (judgeBrand()) {
           case 'iphone':
