--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>http://www.jukuner.com/cn/</title>
-    <link rel="canonical" href="http://www.jukuner.com/cn/">
+    <title>https://www.jukuner.com/cn/</title>
+    <link rel="canonical" href="https://www.jukuner.com/cn/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=http://www.jukuner.com/cn/">
+    <meta http-equiv="refresh" content="0; url=https://www.jukuner.com/cn/">
   </head>
 </html>
