更新app下载地址

--- a/mobileapp.html
+++ b/mobileapp.html
@@ -95,7 +95,8 @@
       }
     }
 
-    goDownload();
+    //goDownload();
+    downLoadUrl('https://a.smart321.com/furlife');
   </script>
 </head>
 
