--- a/index.html
+++ b/index.html
@@ -276,6 +276,21 @@
             }
         })
 
+        document.getElementById('barcode_num').addEventListener("keyup", function(event) {
+            if (event.key === "Enter") {
+                current = parseInt(document.getElementById('barcode_num').value.slice(-4))
+                update()
+            }
+        })
+
+        document.getElementById('barcode_num_2').addEventListener("keyup", function(event) {
+            if (event.key === "Enter") {
+                current = parseInt(document.getElementById('barcode_num_2').value.slice(-4)) - 1
+                update()
+            }
+        })
+
+
         update()
     </script>
 
